--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,6 +19,9 @@
                 <th>Weight</th>
                 <th>Height</th>
                 <th>BMI</th>
+                <th>BMR</th>
+                <th>GOAL</th>
+                <th>EXCLUDED_FOODS</th>
                 <th>Created At</th>
                 <th>Updated At</th>
             </tr>
@@ -33,8 +36,11 @@
                 <td th:text="${user.weight}"></td>
                 <td th:text="${user.height}"></td>
                 <td th:text="${user.bmi}"></td>
-                <td th:text="${user.createdAt}"></td>
-                <td th:text="${user.updatedAt}"></td>
+                <td th:text="${user.bmr}"></td>
+                <td th:text="${user.goal}"></td>
+                <td th:text="${user.excluded_foods}"></td>
+                <td th:text="${user.created_at}"></td>
+                <td th:text="${user.updated_at}"></td>
             </tr>
         </tbody>
     </table>
