--- a/src/main/resources/templates/user/getUser.html
+++ b/src/main/resources/templates/user/getUser.html
@@ -47,15 +47,7 @@
 </head>
 
 <body>
-  <div>
-    <div th:if="${session.user == null}">
-      <a href="/signup" class="btn">회원가입/로그인</a>
-    </div>
-    <div th:if="${session.user != null}">
-      <h2 th:text="'환영합니다, ' + ${session.user.name} + '님!'"></h2>
-      <a href="/logout" class="btn">로그아웃</a>
-    </div>
-  </div>
+  <div th:insert="fragments/header :: header"></div>
   <h1>My Page</h1>
 
   <form th:action="@{/updateUser}" method="post">
@@ -132,6 +124,7 @@
     </table>
   </form>
 
+  <div th:insert="fragments/footer :: footer"></div>
 </body>
 
 </html>
