--- a/src/main/resources/templates/user/getUser.html
+++ b/src/main/resources/templates/user/getUser.html
@@ -47,8 +47,9 @@
 </head>
 
 <body>
-  <div th:insert="fragments/header :: header"></div>
-  <h1>My Page</h1>
+  <div th:insert="~{fragments/header :: header}"></div>
+
+  <h1>My Page <a href="/user/getBmiRecords" style="float: right; font-size: 16px; margin-right: 16px;">몸무게차트</a></h1>
 
   <form th:action="@{/updateUser}" method="post">
     <table border="1">
@@ -124,7 +125,7 @@
     </table>
   </form>
 
-  <div th:insert="fragments/footer :: footer"></div>
+  <div th:insert="~{fragments/footer :: footer}"></div>
 </body>
 
 </html>
