--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,150 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Users List</title>
+    <title>Main</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
     <div th:insert="~{fragments/header :: header}"></div>
-    
+
+    <h3>먹고 싶은 음식을 선택하세요</h3>
+    <button id="startSelection">오늘 뭐먹지?</button>
+
+    <!-- 팝업창 -->
+    <div id="popup"
+        style="display: none; position: fixed; top: 20%; left: 30%; width: 40%; background: #fff; padding: 20px; border: 1px solid #ccc; z-index: 1000; box-shadow: 0 0 10px rgba(0,0,0,0.5);">
+        <h2 id="popupTitle"></h2>
+        <div id="popupContent"></div>
+        <br>
+        <button id="closePopup">닫기</button>
+    </div>
+    <br /><br />
+
+    <script>
+        $(document).ready(function () {
+            // 메뉴 데이터
+            const menuData = [
+                {
+                    title: "카테고리를 선택하세요",
+                    options: ["패스트", "안패스트", "디저트", "안주"],
+                    next: {
+                        "패스트": 1,
+                        "안패스트": 2,
+                        "디저트": 10,
+                        "안주": 11
+                    }
+                },
+                {
+                    title: "패스트 종류를 선택하세요",
+                    options: ["햄버거", "샌드위치", "토스트", "분식", "김밥", "핫도그", "라면", "시리얼"],
+                },
+                {
+                    title: "안패스트 종류를 선택하세요",
+                    options: ["국물", "안국물"],
+                    next: {
+                        "국물": 3,
+                        "안국물": 6
+                    }
+                },
+                {
+                    title: "국물을 선택하세요",
+                    options: ["빨간 국물", "하얀 국물"],
+                    next: {
+                        "빨간 국물": 4,
+                        "안빨간 국물": 5
+                    }
+                },
+                {
+                    title: "빨간 국물의 세부를 선택하세요",
+                    options: ["김치찌개", "부대찌개", "매운탕", "육개장"]
+                },
+                {
+                    title: "안빨간 국물의 세부를 선택하세요",
+                    options: ["된장찌개", "순두부찌개", "삼계탕", "설렁탕", "곰탕", "갈비탕", "미역국"]
+                },
+                {
+                    title: "안국물을 선택하세요",
+                    options: ["쌀", "안쌀"],
+                    next: {
+                        "쌀": 7,
+                        "안쌀": 8
+                    }
+                },
+                {
+                    title: "쌀의 세부를 선택하세요",
+                    options: ["비빔밥", "덮밥", "볶음밥", "죽"]
+                },
+                {
+                    title: "안쌀의 세부를 선택하세요",
+                    options: ["면", "빵"],
+                    next: {
+                        "면": 9,
+                    }
+                },
+                {
+                    title: "면의 세부를 선택하세요",
+                    options: ["짜장면", "짬뽕", "라면", "우동", "소바", "냉모밀", "칼국수"],
+
+                },
+                {
+                    title: "디저트를 선택하세요",
+                    options: ["케이크", "아이스크림", "빵류", "음료", "과일"]
+                },
+                {
+                    title: "안주를 선택하세요",
+                    options: ["마른안주", "튀김 안주", "전/부침류", "구이류", "볶음류", "전골/탕류"]
+                }
+            ];
+
+            let currentStep = 0;
+
+            // 팝업 표시 함수
+            function showPopup(step) {
+                const stepData = menuData[step];
+                if (!stepData) {
+                    alert("선택이 완료되었습니다!");
+                    $("#popup").hide();
+                    return;
+                }
+
+                $("#popupTitle").text(stepData.title);
+                const optionsHtml = stepData.options.map(option => `
+                    <button class="option" data-option="${option}">${option}</button>
+                `).join("");
+                $("#popupContent").html(optionsHtml);
+                $("#popup").show();
+
+                $(".option").click(function () {
+                    const selectedOption = $(this).data("option");
+                    // alert(`${selectedOption}를 선택하셨습니다.`);
+
+                    // 다음 단계로 이동 (없는 경우 멈춤)
+                    currentStep = stepData.next?.[selectedOption];
+                    if (currentStep !== undefined) {
+                        showPopup(currentStep);
+                    } else {
+                        $("#popup").hide();
+                    }
+                });
+            }
+
+            // 시작 버튼 이벤트
+            $("#startSelection").click(function () {
+                currentStep = 0;
+                showPopup(currentStep);
+            });
+
+            // 닫기 버튼 이벤트
+            $("#closePopup").click(function () {
+                $("#popup").hide();
+            });
+        });
+    </script>
+
     <h1>Users List</h1>
 
     <table border="1">
