--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,9 +7,10 @@
         <a href="/">HealthyPath</a>
       </h1>
     </div>
-
+    
     <!-- 버튼 -->
     <div>
+      <a href="/food/getFoods">음식 검색</a>
       <div th:if="${session.user == null}" style="text-align: right;">
         <a href="/signup" class="btn" style="margin-left: 10px;">회원가입/로그인</a>
       </div>
