--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,6 +5,7 @@
     <div>
       <h1 style="margin: 0; font-size: 24px; color: #333;">
         <a href="/">HealthyPath</a>
+        <a href="/food/getRecipes" style="font-size: 16px">레시피</a>
       </h1>
     </div>
     
