--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,15 +1,12 @@
 <div th:fragment="header">
-  <!-- 상단 제목 -->
   <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px 20px; border-bottom: 1px solid #ddd;">
-    <!-- 제목 -->
     <div>
       <h1 style="margin: 0; font-size: 24px; color: #333;">
         <a href="/">HealthyPath</a>
-        <a href="/food/getRecipes" style="font-size: 16px">레시피</a>
+        <a href="/food/getRecipes" style="font-size: 16px">요리소개</a>
       </h1>
     </div>
     
-    <!-- 버튼 -->
     <div>
       <div th:if="${session.user == null}" style="text-align: right;">
         <a href="/signup" class="btn" style="margin-left: 10px;">회원가입/로그인</a>
