add: 아침, 점심, 저녁 카테고리 별 음식 3가지 랜덤 추천

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,6 +13,7 @@
       </div>
       <div th:if="${session.user != null}" style="text-align: right;">
         <span th:text="'환영합니다, ' + ${session.user.name} + '님!'" style="margin-right: 10px; font-size: 14px;"></span>
+        <a href="/food/recommendForm" class="btn" style="margin-left: 10px;">음식추천</a>
         <a href="/user/getUser" class="btn" style="margin-left: 10px;">마이페이지</a>
         <a href="/logout" class="btn" style="margin-left: 10px;">로그아웃</a>
       </div>
