--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,7 +3,7 @@
     <div>
       <h1 style="margin: 0; font-size: 24px; color: #333;">
         <a href="/">HealthyPath</a>
-        <a href="/food/getRecipes" style="font-size: 16px">요리소개</a>
+        <a href="/food/getRecipes" style="font-size: 16px">레시피소개</a>
       </h1>
     </div>
     
@@ -14,6 +14,7 @@
       <div th:if="${session.user != null}" style="text-align: right;">
         <span th:text="'환영합니다, ' + ${session.user.name} + '님!'" style="margin-right: 10px; font-size: 14px;"></span>
         <a href="/food/recommendForm" class="btn" style="margin-left: 10px;">음식추천</a>
+        <a href="/food/getFoodRecommendations" class="btn" style="margin-left: 10px;">저장한음식</a>
         <a href="/user/getUser" class="btn" style="margin-left: 10px;">마이페이지</a>
         <a href="/logout" class="btn" style="margin-left: 10px;">로그아웃</a>
       </div>
