--- a/src/main/resources/templates/user/getUser.html
+++ b/src/main/resources/templates/user/getUser.html
@@ -68,7 +68,10 @@
 <body>
   <div th:insert="~{fragments/header :: header}"></div>
 
-  <h1>My Page <a href="/user/getBmiRecords" style="float: right; font-size: 16px; margin-right: 16px;">몸무게차트</a></h1>
+  <h1>My Page 
+    <a href="/user/getBmiRecords" style="float: right; font-size: 16px; margin-right: 16px;">몸무게차트</a>
+    <a href="/food/insertDailyMealForm" style="float: right; font-size: 16px; margin-right: 16px;">식단관리</a>
+  </h1>
 
   <form th:action="@{/updateUser}" method="post" onsubmit="return showSuccessMessage()">
     <table border="1">
