--- a/src/main/resources/templates/user/getUser.html
+++ b/src/main/resources/templates/user/getUser.html
@@ -70,7 +70,7 @@
 
   <h1>My Page 
     <a href="/user/getBmiRecords" style="float: right; font-size: 16px; margin-right: 16px;">몸무게차트</a>
-    <a href="/food/insertDailyMealForm" style="float: right; font-size: 16px; margin-right: 16px;">식단관리</a>
+    <a href="/food/getDailyMeals" style="float: right; font-size: 16px; margin-right: 16px;">식단관리</a>
   </h1>
 
   <form th:action="@{/updateUser}" method="post" onsubmit="return showSuccessMessage()">
